--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
+@font-face {
+    font-family: "Digital";
+    src: url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.eot");
+    src: url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.eot?#iefix") format("embedded-opentype"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.woff2") format("woff2"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.woff") format("woff"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.ttf") format("truetype"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.svg#Digital-7") format("svg");
+}
+/*.App {*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    margin: auto;*/
+/*}*/
+
+body {
+    background: #efefef;
+    color: #a9a9a9;
+    font-size: 24px;
+    text-align: center;
+    font-family: "Cambria", serif;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    /*font-size: 30px;*/
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+    margin: 20px;
+    padding: 10px;
+    background: #efefef;
+    align-items: center;
+    width: 13em;
+    max-width: 13em;
+    border-radius: 20px;
+    border-width: thick;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.arrows {
+    /*font-weight: bold;*/
+    font-size: 14px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.session-stop {
+    border-color: #ff3b3f;
 }
 
-.App-link {
-  color: #61dafb;
+.session-start {
+    border-color: #228B22;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.session-buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
 }
